<resources>
    <string name="app_name">LionDesk</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings coming from Friendly Chat, related to Login -->
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <!-- Strings Related to Account Preference -->
    <string name="action_account">Account</string>
    <string name="title_activity_account">Account</string>
    <string name="email_address">Email :</string>
    <string name="email_confirmation">Send Confirmation Email</string>
    <string name="account_settings">My Account Settings</string>
    <string name="summary_email">Email</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="summary_password">Password</string>
    <string name="edit_preference_cancel">Cancel</string>
    <string name="edit_preference_submit">Submit</string>
    <string name="preference_dialog_title_edit_email">Edit Email</string>
    <string name="preference_dialog_message_email">Enter Your Email</string>
    <string name="preference_dialog_message_password">Enter Your Password</string>
    <string name="preference_dialog_title_edit_password">Edit Password</string>
    <string name="action_signout">Sign Out</string>

    <!-- Alert message about internet connectivity -->
    <string name="alert_no_internet">No Internet Connection</string>
    <string name="alert_no_desk_selected">Please Select A Desk First</string>
    <string name="confirmation_booking">Hotdesk Booking Confirmed</string>
    <string name="booking_cancelled">Hotdesk Booking CANCELLED</string>
    <string name="calendar_insertion">Add To Calendar</string>
    <string name="permissions_not_granted">As CALENDAR PERMISSION is denied, impossible to add booking to calendar.</string>

</resources>
